--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,13 @@ img {
   text-align: center;
 }
 
+/* Container */
+.container {
+  max-width: 70%;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
 
 /* Buttons */
 .btn {
