--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,11 @@ img {
   padding: 0 2rem;
 }
 
+.tabs p {
+  font-size: 1.2rem;
+  padding-top: 0.5rem;
+}
+
 /* Buttons */
 .btn {
   display: inline-block;
