Add direct div under class tab and container Add some padding to div

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,9 @@ img {
   padding-top: 0.5rem;
 }
 
+.tabs .container > div {
+  padding: 1.5rem 0;
+}
 /* Buttons */
 .btn {
   display: inline-block;
