--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,11 @@ img {
 .tabs .container > div {
   padding: 1.5rem 0;
 }
+
+.tabs .container >div:hover {
+  color: #fff;
+  cursor: pointer;
+}
 /* Buttons */
 .btn {
   display: inline-block;
